sales/triggerFramework/objects/TriggerHandler__mdt/TriggerHandler__mdt.object-meta.xml
<CustomObject>
    <description>Trigger handler for related trigger object</description>
    <label>Trigger Handler</label>
    <pluralLabel>Trigger Handlers</pluralLabel>
</CustomObject>