sales/triggerFramework/objects/TriggerHandler__mdt/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is handler active</description>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>