sales/triggerFramework/objects/TriggerHandler__mdt/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <description>Field to hold api name of the object for which this handler is created</description>
    <label>Trigger Object Api Name</label>
    <length>43</length>
    <required>true</required>
    <type>Text</type>
</CustomField>