sales/triggerFramework/objects/TriggerHandler__mdt/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>Execution sequence of handler</description>
    <label>Sequence</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>