sales/triggerFramework/objects/TriggerHandler__mdt/fields/TriggerObject__c.field-meta.xml
<CustomField>
    <fullName>TriggerObject__c</fullName>
    <description>Trigger object for the handler</description>
    <label>Trigger Object</label>
    <referenceTo>TriggerObject__mdt</referenceTo>
    <relationshipLabel>Trigger Handlers</relationshipLabel>
    <relationshipName>Trigger_Handlers</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>