sales/triggerFramework/objects/TriggerHandler__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ObjectApiName__c</columns>
    <columns>TriggerObject__c</columns>
    <columns>Sequence__c</columns>
    <columns>isActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>